# esp-ioT

./: .gitignore  Cargo.toml  EN-README.md  README.md  setup.sh  xtensa-esp32-espidf.json  xtensa-esp32-none-elf.json
.cargo/: config.toml
src/: ioT.rs  main.rs  server.rs  wifi.rs
src.full/: main.rs  sensor_testver.rs  wifi.rs
src.min/: ioT.rs  server-init.rs
