[package]
name = "esp32-iot-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-hal = "0.45"
esp-idf-svc = "0.51"
esp-wifi = "0.13" 
anyhow = "1.0"
log = "0.4"
heapless = "0.7"           
embedded-svc = "0.26"

#[[bin]]
#name = "wifi"
#path = "src/wifi.rs"

