[package]
name = "esp32-iot-monitor"
version = "0.1.0"
edition = "2021"
description = "Micro embedded-sys for esp32-iot"
license = "CC0 1.0"

#[dependencies]
#esp-idf-sys = { version = "0.36", features = ["binstart"] }
#esp-idf-hal = { version = "0.45", features = ["critical-section"] }
#esp-idf-svc = { version = "0.51", default-features = false }

[dependencies]
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51"
esp-wifi = "0.7" #{ version = "0.7", features = ["wifi"] }
esp-wifi-sys = "0.7" #{ version = "0.7.0", features = ["wifi"] }
serde = { version = "1.0", features = ["derive"] }
heapless = { version = "0.8", features = ["serde"] }
postcard = { version = "1.0", features = ["heapless"] }

[build]
target = "xtensa-esp32-none-elf"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

[[bin]]
name = "wifi"
path = "src/wifi.rs"

#[env]
#ESP_IDF_PATH = { value = "/path/to/esp-idf", relative = false }
