[package]
name = "esp32-iot-monitor"
version = "0.1.0"
edition = "2021"
description = "Micro embedded-sys for esp32-iot"
license = "CC0 1.0"

[dependencies]
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = { version = "0.45.1", features = ["critical-section"] }
esp-idf-svc = "0.51"
esp-wifi = { version = "0.7", features = ["esp32", "wifi"] }
critical-section = { version = "1.2", features = ["restore-state-u32"] }
nanoserde = "0.1.0" 
heapless = "0.8" #{ version = "0.8", features = ["serde"] }
postcard = { version = "1.0", features = ["heapless"] }
embedded-io = "0.6"
bmp280 = "0.1.2"
#core_io = { version = "0.1", features = ["collections"] }

[build]
target = "xtensa-esp32-espidf.json"

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]

[[bin]]
name = "wifi"
path = "src.min/main.rs"

[features]
default = ["std"]
std = []

#[env]
#ESP_IDF_PATH = { value = "/path/to/esp-idf", relative = false }
